Implemented add one to array of numbers